<resources>
    <string name="app_name">The New York Times</string>
    <string name="action_settings">Settings</string>
    <string name="search_hint">Search NY Times ...</string>
    <string name="title_activity_display_article">DisplayArticleActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="food">Food</string>
    <string name="fashion">Fashion</string>
    <string name="tech">Technology</string>
    <string name="dining">Dining</string>
    <string name="travel">Travel</string>
    <string name="save">Save</string>
    <string name="news_desk">News Desk values</string>
    <string name="sort_order">Sort</string>
    <string name="begin_date">Begin date:</string>
    <string name="oldest">Oldest</string>
    <string name="newest">Newest</string>
    <string name="begin_date_hint">MM/DD/YY</string>
    <string name="ignore_begin_date">Ignore begin date</string>

    <string-array name="sort_order">
        <item>Oldest</item>
        <item>Newest</item>
    </string-array>
</resources>
